Agregando rescurso de imagen

--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pacman</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <header>
-        
+        <div class="container">
+            <img src="./sources/frito.png" alt="imagen of logo fritolay">
+        </div>
     </header>
 
     <main>
@@ -16,7 +19,7 @@
     </main>
 
     <footer>
-
+        <h1>hola footer </h1>
     </footer>
 </body>
 </html>
