creando estructura de main

--- a/index.html
+++ b/index.html
@@ -15,7 +15,37 @@
     </header>
 
     <main>
-
+        <div class="container_main">
+            <h2>
+                SELECCIONA TU PAIS
+            </h2>
+            <div class="container-img">
+                <div class="container-icon">
+                    <img src="" alt="">
+                    <span>
+                        Guatemala
+                    </span>
+                </div>
+                <div class="container-icon">
+                    <img src="" alt="">
+                    <span>
+                        Honduras
+                    </span>
+                </div>
+                <div class="container-icon">
+                    <img src="" alt="">
+                    <span>
+                        Salvador
+                    </span>
+                </div>
+                <div class="container-icon">
+                    <img src="" alt="">
+                    <span>
+                        Panama
+                    </span>
+                </div>
+            </div>
+        </div>
     </main>
 
     <footer>
